--- a/index.html
+++ b/index.html
@@ -210,7 +210,31 @@
           </div>
           <div>
             <h4>Trending</h4>
-            <div class="anoun-card"></div>
+            <div class="anoun-card">
+              <div class="anoun-card-txt trending-card-txt">
+                <span><img src="images/52.png" alt="" /></span>
+                <h5>@tegan</h5>
+                <p>World Peace Builder</p>
+              </div>
+
+              <div class="anoun-card-txt trending-card-txt">
+                <span><img src="images/52.png" alt="" /></span>
+                <h5>@morgan</h5>
+                <p>Super Cool Project</p>
+              </div>
+
+              <div class="anoun-card-txt trending-card-txt">
+                <span><img src="images/52.png" alt="" /></span>
+                <h5>@kendall</h5>
+                <p>Life Changing App</p>
+              </div>
+
+              <div class="anoun-card-txt-last trending-card-txt">
+                <span><img src="images/52.png" alt="" /></span>
+                <h5>@alex</h5>
+                <p>No Traffic Maker</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
