Added icons and cleaned up components.css

--- a/index.html
+++ b/index.html
@@ -6,45 +6,55 @@
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="stylesheets/layout.css" />
     <link rel="stylesheet" href="stylesheets/components.css" />
+    <!-- fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;800&display=swap"
+      rel="stylesheet"
+    />
+    <!-- end of fonts -->
   </head>
   <body>
     <div class="grid">
       <div class="sidebar">
         <div class="logo flex-center">
-          <span><img src="images/25.png" alt="" /></span> Dashboard
+          <span
+            ><img src="images/view-dashboard-white.png" alt="logo" width="52px"
+          /></span>
+          <h1>Dashboard</h1>
         </div>
         <div class="menu">
           <ul>
             <li class="flex-center">
-              <span><img src="images/15.png" alt="" /></span> Home
+              <span><img src="images/home-white.png" alt="" /></span> Home
             </li>
             <li class="flex-center">
-              <span><img src="images/15.png" alt="" /></span> Profile
+              <span><img src="images/profile.png" alt="" /></span> Profile
             </li>
             <li class="flex-center">
-              <span><img src="images/15.png" alt="" /></span> Messages
+              <span><img src="images/messages.png" alt="" /></span> Messages
             </li>
             <li class="flex-center">
-              <span><img src="images/15.png" alt="" /></span> History
+              <span><img src="images/history.png" alt="" /></span> History
             </li>
             <li class="flex-center">
-              <span><img src="images/15.png" alt="" /></span> Tasks
+              <span><img src="images/tasks.png" alt="" /></span> Tasks
             </li>
             <li class="flex-center">
-              <span><img src="images/15.png" alt="" /></span> Communities
+              <span><img src="images/communities.png" alt="" /></span>
+              Communities
             </li>
           </ul>
         </div>
         <div class="links">
           <ul>
             <li class="flex-center">
-              <span><img src="images/15.png" alt="" /></span> Settings
+              <span><img src="images/settings.png" alt="" /></span> Settings
             </li>
             <li class="flex-center">
-              <span><img src="images/15.png" alt="" /></span> Support
+              <span><img src="images/support.png" alt="" /></span> Support
             </li>
             <li class="flex-center">
-              <span><img src="images/15.png" alt="" /></span> Privacy
+              <span><img src="images/privacy.png" alt="" /></span> Privacy
             </li>
           </ul>
         </div>
@@ -52,18 +62,33 @@
 
       <div class="header">
         <div class="search">
-          <span><img src="images/15.png" alt="" /></span>
+          <span
+            ><img
+              src="images/magnify.svg"
+              alt="search"
+              width="24px"
+              height="24px"
+          /></span>
           <input type="text" name="search" id="search" />
         </div>
 
         <div class="search-2">
-          <span><img src="images/15.png" alt="" /></span>
-          <span><img src="images/25.png" alt="" /></span>
-          <p>Name Surname</p>
+          <span
+            ><img
+              src="images/bell-ring-outline.svg"
+              alt="notifications"
+              width="24px"
+          /></span>
+          <span
+            ><img src="images/account-circle.svg" alt="profile" width="52px"
+          /></span>
+          <h3>Name Surname</h3>
         </div>
 
         <div class="profile-1">
-          <span><img src="images/52.png" alt="" /></span>
+          <span
+            ><img src="images/account-circle.svg" alt="" width="52px"
+          /></span>
           <div class="profile-1-inner">
             <h6>Hi, there</h6>
             <h3>Name Surname (handle)</h3>
@@ -89,9 +114,13 @@
             </div>
 
             <div class="icons">
-              <span><img src="images/15.png" alt="favourite" /></span>
-              <span><img src="images/15.png" alt="watch" /></span>
-              <span><img src="images/15.png" alt="share" /></span>
+              <span
+                ><img src="images/star-plus-outline.svg" alt="favourite"
+              /></span>
+              <span><img src="images/eye-plus-outline.svg" alt="watch" /></span>
+              <span
+                ><img src="images/bell-ring-outline.svg" alt="github"
+              /></span>
             </div>
           </div>
 
@@ -107,9 +136,13 @@
             </div>
 
             <div class="icons">
-              <span><img src="images/15.png" alt="favourite" /></span>
-              <span><img src="images/15.png" alt="watch" /></span>
-              <span><img src="images/15.png" alt="share" /></span>
+              <span
+                ><img src="images/star-plus-outline.svg" alt="favourite"
+              /></span>
+              <span><img src="images/eye-plus-outline.svg" alt="watch" /></span>
+              <span
+                ><img src="images/bell-ring-outline.svg" alt="github"
+              /></span>
             </div>
           </div>
 
@@ -123,9 +156,13 @@
             </div>
 
             <div class="icons">
-              <span><img src="images/15.png" alt="favourite" /></span>
-              <span><img src="images/15.png" alt="watch" /></span>
-              <span><img src="images/15.png" alt="share" /></span>
+              <span
+                ><img src="images/star-plus-outline.svg" alt="favourite"
+              /></span>
+              <span><img src="images/eye-plus-outline.svg" alt="watch" /></span>
+              <span
+                ><img src="images/bell-ring-outline.svg" alt="github"
+              /></span>
             </div>
           </div>
 
@@ -140,9 +177,13 @@
             </div>
 
             <div class="icons">
-              <span><img src="images/15.png" alt="favourite" /></span>
-              <span><img src="images/15.png" alt="watch" /></span>
-              <span><img src="images/15.png" alt="share" /></span>
+              <span
+                ><img src="images/star-plus-outline.svg" alt="favourite"
+              /></span>
+              <span><img src="images/eye-plus-outline.svg" alt="watch" /></span>
+              <span
+                ><img src="images/bell-ring-outline.svg" alt="github"
+              /></span>
             </div>
           </div>
 
@@ -156,9 +197,13 @@
             </div>
 
             <div class="icons">
-              <span><img src="images/15.png" alt="favourite" /></span>
-              <span><img src="images/15.png" alt="watch" /></span>
-              <span><img src="images/15.png" alt="share" /></span>
+              <span
+                ><img src="images/star-plus-outline.svg" alt="favourite"
+              /></span>
+              <span><img src="images/eye-plus-outline.svg" alt="watch" /></span>
+              <span
+                ><img src="images/bell-ring-outline.svg" alt="github"
+              /></span>
             </div>
           </div>
 
@@ -173,9 +218,13 @@
             </div>
 
             <div class="icons">
-              <span><img src="images/15.png" alt="favourite" /></span>
-              <span><img src="images/15.png" alt="watch" /></span>
-              <span><img src="images/15.png" alt="share" /></span>
+              <span
+                ><img src="images/star-plus-outline.svg" alt="favourite"
+              /></span>
+              <span><img src="images/eye-plus-outline.svg" alt="watch" /></span>
+              <span
+                ><img src="images/bell-ring-outline.svg" alt="github"
+              /></span>
             </div>
           </div>
         </div>
@@ -212,25 +261,25 @@
             <h4>Trending</h4>
             <div class="anoun-card">
               <div class="anoun-card-txt trending-card-txt">
-                <span><img src="images/52.png" alt="" /></span>
+                <span><img src="images/account-circle.svg" alt="" /></span>
                 <h5>@tegan</h5>
                 <p>World Peace Builder</p>
               </div>
 
               <div class="anoun-card-txt trending-card-txt">
-                <span><img src="images/52.png" alt="" /></span>
+                <span><img src="images/account-circle.svg" alt="" /></span>
                 <h5>@morgan</h5>
                 <p>Super Cool Project</p>
               </div>
 
               <div class="anoun-card-txt trending-card-txt">
-                <span><img src="images/52.png" alt="" /></span>
+                <span><img src="images/account-circle.svg" alt="" /></span>
                 <h5>@kendall</h5>
                 <p>Life Changing App</p>
               </div>
 
               <div class="anoun-card-txt-last trending-card-txt">
-                <span><img src="images/52.png" alt="" /></span>
+                <span><img src="images/account-circle.svg" alt="" /></span>
                 <h5>@alex</h5>
                 <p>No Traffic Maker</p>
               </div>
