font styling finished

--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
               </p>
             </div>
           </div>
-          <div>
-            <h4>Trending</h4>
+          <div class="trending-card">
+            <h3>Trending</h3>
             <div class="anoun-card">
               <div class="anoun-card-txt trending-card-txt">
                 <span><img src="images/account-circle.svg" alt="" /></span>
