Edited the profile filler text. Made changes to the grid layout and added extra styling to the components.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <span
             ><img src="images/account-circle.svg" alt="profile" width="52px"
           /></span>
-          <h3>Name Surname</h3>
+          <h3>Kyle D.</h3>
         </div>
 
         <div class="profile-1">
@@ -91,7 +91,7 @@
           /></span>
           <div class="profile-1-inner">
             <h6>Hi, there</h6>
-            <h3>Name Surname (handle)</h3>
+            <h3>Kyle D. (@wolfskullcave)</h3>
           </div>
         </div>
 
@@ -103,132 +103,145 @@
       </div>
       <div class="content">
         <div class="projects">
-          <h3 class="heading">Your Projects</h3>
-          <div class="project-card">
-            <div class="card-txt">
-              <h4>Super cool project</h4>
-              <p>
-                Sed tempus ut lacus ut scelerisque, Suspendisse sollicitudin
-                nibh erat, id facilisis felis accumsan nec.
-              </p>
+          <h2 class="heading">Your Projects</h2>
+          <div class="project-grid">
+            <div class="project-card">
+              <div class="card-txt">
+                <h4>Super cool project</h4>
+                <p>
+                  Sed tempus ut lacus ut scelerisque, Suspendisse sollicitudin
+                  nibh erat, id facilisis felis accumsan nec.
+                </p>
+              </div>
+
+              <div class="icons">
+                <span
+                  ><img src="images/star-plus-outline.svg" alt="favourite"
+                /></span>
+                <span
+                  ><img src="images/eye-plus-outline.svg" alt="watch"
+                /></span>
+                <span
+                  ><img src="images/bell-ring-outline.svg" alt="github"
+                /></span>
+              </div>
             </div>
 
-            <div class="icons">
-              <span
-                ><img src="images/star-plus-outline.svg" alt="favourite"
-              /></span>
-              <span><img src="images/eye-plus-outline.svg" alt="watch" /></span>
-              <span
-                ><img src="images/bell-ring-outline.svg" alt="github"
-              /></span>
-            </div>
-          </div>
+            <div class="project-card">
+              <div class="card-txt">
+                <h4>Less Cool Project</h4>
+                <p>
+                  Nullam condimentum ipsum ut lectus vehicula consectetur.
+                  Quisque sed dolor tincidunt, consectetur sapien et, facilisis
+                  dolor- Duis sem purus, dignissim ut sapien in, varius
+                  pellentesque lacus.
+                </p>
+              </div>
 
-          <div class="project-card">
-            <div class="card-txt">
-              <h4>Less Cool Project</h4>
-              <p>
-                Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque
-                sed dolor tincidunt, consectetur sapien et, facilisis dolor-
-                Duis sem purus, dignissim ut sapien in, varius pellentesque
-                lacus.
-              </p>
-            </div>
-
-            <div class="icons">
-              <span
-                ><img src="images/star-plus-outline.svg" alt="favourite"
-              /></span>
-              <span><img src="images/eye-plus-outline.svg" alt="watch" /></span>
-              <span
-                ><img src="images/bell-ring-outline.svg" alt="github"
-              /></span>
-            </div>
-          </div>
-
-          <div class="project-card">
-            <div class="card-txt">
-              <h4>Impossible App</h4>
-              <p>
-                In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a
-                placerat velit sagittis id.
-              </p>
+              <div class="icons">
+                <span
+                  ><img src="images/star-plus-outline.svg" alt="favourite"
+                /></span>
+                <span
+                  ><img src="images/eye-plus-outline.svg" alt="watch"
+                /></span>
+                <span
+                  ><img src="images/bell-ring-outline.svg" alt="github"
+                /></span>
+              </div>
             </div>
 
-            <div class="icons">
-              <span
-                ><img src="images/star-plus-outline.svg" alt="favourite"
-              /></span>
-              <span><img src="images/eye-plus-outline.svg" alt="watch" /></span>
-              <span
-                ><img src="images/bell-ring-outline.svg" alt="github"
-              /></span>
-            </div>
-          </div>
+            <div class="project-card">
+              <div class="card-txt">
+                <h4>Impossible App</h4>
+                <p>
+                  In hac habitasse platea dictumst. Vivamus dictum rutrum arcu,
+                  a placerat velit sagittis id.
+                </p>
+              </div>
 
-          <div class="project-card">
-            <div class="card-txt">
-              <h4>Easy Peasy App</h4>
-              <p>
-                Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim
-                urna eget accumsan aliquam. Curabitur dignissim nisi in tortor
-                commodo, ac bibendum magna tincidunt.
-              </p>
-            </div>
-
-            <div class="icons">
-              <span
-                ><img src="images/star-plus-outline.svg" alt="favourite"
-              /></span>
-              <span><img src="images/eye-plus-outline.svg" alt="watch" /></span>
-              <span
-                ><img src="images/bell-ring-outline.svg" alt="github"
-              /></span>
-            </div>
-          </div>
-
-          <div class="project-card">
-            <div class="card-txt">
-              <h4>Ad Blocker</h4>
-              <p>
-                Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus
-                vel, pharetra hendrerit felis. Aliquam sed malesuada
-              </p>
+              <div class="icons">
+                <span
+                  ><img src="images/star-plus-outline.svg" alt="favourite"
+                /></span>
+                <span
+                  ><img src="images/eye-plus-outline.svg" alt="watch"
+                /></span>
+                <span
+                  ><img src="images/bell-ring-outline.svg" alt="github"
+                /></span>
+              </div>
             </div>
 
-            <div class="icons">
-              <span
-                ><img src="images/star-plus-outline.svg" alt="favourite"
-              /></span>
-              <span><img src="images/eye-plus-outline.svg" alt="watch" /></span>
-              <span
-                ><img src="images/bell-ring-outline.svg" alt="github"
-              /></span>
-            </div>
-          </div>
+            <div class="project-card">
+              <div class="card-txt">
+                <h4>Easy Peasy App</h4>
+                <p>
+                  Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim
+                  urna eget accumsan aliquam. Curabitur dignissim nisi in tortor
+                  commodo, ac bibendum magna tincidunt.
+                </p>
+              </div>
 
-          <div class="project-card">
-            <div class="card-txt">
-              <h4>Money Maker</h4>
-              <p>
-                Praesent convallis, libero quis congue elementum, nunc ante
-                faucibus sapien, ac scelerisque tortor purus sit amet ex.
-                Pellentesque mollis nec sem vel aliquam.
-              </p>
+              <div class="icons">
+                <span
+                  ><img src="images/star-plus-outline.svg" alt="favourite"
+                /></span>
+                <span
+                  ><img src="images/eye-plus-outline.svg" alt="watch"
+                /></span>
+                <span
+                  ><img src="images/bell-ring-outline.svg" alt="github"
+                /></span>
+              </div>
             </div>
 
-            <div class="icons">
-              <span
-                ><img src="images/star-plus-outline.svg" alt="favourite"
-              /></span>
-              <span><img src="images/eye-plus-outline.svg" alt="watch" /></span>
-              <span
-                ><img src="images/bell-ring-outline.svg" alt="github"
-              /></span>
+            <div class="project-card">
+              <div class="card-txt">
+                <h4>Ad Blocker</h4>
+                <p>
+                  Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus
+                  vel, pharetra hendrerit felis. Aliquam sed malesuada
+                </p>
+              </div>
+
+              <div class="icons">
+                <span
+                  ><img src="images/star-plus-outline.svg" alt="favourite"
+                /></span>
+                <span
+                  ><img src="images/eye-plus-outline.svg" alt="watch"
+                /></span>
+                <span
+                  ><img src="images/bell-ring-outline.svg" alt="github"
+                /></span>
+              </div>
+            </div>
+
+            <div class="project-card">
+              <div class="card-txt">
+                <h4>Money Maker</h4>
+                <p>
+                  Praesent convallis, libero quis congue elementum, nunc ante
+                  faucibus sapien, ac scelerisque tortor purus sit amet ex.
+                  Pellentesque mollis nec sem vel aliquam.
+                </p>
+              </div>
+
+              <div class="icons">
+                <span
+                  ><img src="images/star-plus-outline.svg" alt="favourite"
+                /></span>
+                <span
+                  ><img src="images/eye-plus-outline.svg" alt="watch"
+                /></span>
+                <span
+                  ><img src="images/bell-ring-outline.svg" alt="github"
+                /></span>
+              </div>
             </div>
           </div>
         </div>
-
         <div class="anoun">
           <h3>Announcments</h3>
           <div class="anoun-card">
@@ -257,9 +270,9 @@
               </p>
             </div>
           </div>
-          <div class="trending-card">
+          <div class="trending-div">
             <h3>Trending</h3>
-            <div class="anoun-card">
+            <div class="trending-card">
               <div class="anoun-card-txt trending-card-txt">
                 <span><img src="images/account-circle.svg" alt="" /></span>
                 <h5>@tegan</h5>
